# traveline-ds-project-skeleton

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
_reference/: 2026-05-22_mlops-translation.md  preliminary-plan.md
configs/: training.yaml
dsm-docs/blog/: 2026-05-22_retrospective-traveline-ds-project-skeleton.md
dsm-docs/checkpoints/: 2026-05-22_s1_checkpoint.md
dsm-docs/feedback-to-dsm/done/: 2026-05-22_project-retrospective.md  2026-05-22_s1_backlogs.md
dsm-docs/guides/: smoke-tests.md  transform-fix.py
dsm-docs/plans/: Sprint_1_skeleton_build.md
dsm-docs/plans/done/: Sprint_1_skeleton_build.md
scripts/: make_sample_data.py
src/rebooking/api/: main.py
src/rebooking/data/: loader.py
src/rebooking/features/: transform.py
src/rebooking/models/: train.py
tests/unit/: test_loader.py  test_transform.py
