[project]
name = "rebooking"
version = "0.1.0"
description = "Customer rebooking prediction skeleton (binary classification, src-layout demo)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Berto Diaz Durana", email = "adiazdurana@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebooking"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
